<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="obj"
            type="com.android.popularmovies.adapters.Movie"/>
    </data>

    <RelativeLayout
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:transitionName="poster"
            android:background="@drawable/ripple"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="fitXY"
            app:imageUrl="@{obj.poster_path}"/>

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/itemImage"
            android:layout_centerHorizontal="true"
            android:background="@color/textTransparent"
            android:ellipsize="end"
            android:fontFamily="monospace"
            android:gravity="center"
            android:maxLines="3"
            android:padding="4dp"
            android:text="@{obj.original_title}"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>
</layout>