...
    //onSaveInstanceState
    <string name="pref_pageNo" translatable="false">pref_pageNo</string>
    <string name="pref_firstView" translatable="false">pref_firstView</string>
    <string name="pref_lastClicked" translatable="false">pref_lastClicked</string>

    //Test
    <string name="middle">This is the middle!</string>

</resources>

