...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingEnd="@dimen/buttonPadding"
        android:paddingStart="@dimen/buttonPadding">

        <Button
            android:id="@+id/reviewsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_button"
            android:text="@string/reviews"
...
