<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/test2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            layout="@layout/include_movie_detail"/>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>