<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include
        layout="@layout/tool_bar"/>

    <FrameLayout
        android:id="@+id/detailsViewFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout
        android:id="@+id/fabBottomBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_fab"
        android:onClick="addFavorite"
        app:elevation="0dp"
        app:layout_anchor="@id/detailsViewFrame"
        app:layout_anchorGravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:backgroundTint="#00000000"
            app:elevation="0dp"
            app:fabSize="normal"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>